--- a/packages/titanic_classifier_model/tox.ini
+++ b/packages/titanic_classifier_model/tox.ini
@@ -13,3 +13,15 @@ setenv =
 commands =
     python titanic_classifier_model/train_pipeline.py
     pytest tests
+
+
+[testenv:install_locally]
+deps =
+    {[testenv]deps}
+
+setenv =
+    PYTHONPATH=.
+
+commands =
+    python titanic_classifier_model/train_pipeline.py
+    python setup.py sdist bdist_wheel
