--- a/packages/titanic_classifier_model/requirements.txt
+++ b/packages/titanic_classifier_model/requirements.txt
@@ -4,3 +4,7 @@ scikit-learn>=0.23.2,<0.24.0
 joblib>=0.14.1,<0.15.0
 
 pytest>=5.4.3,<5.5.0
+
+# packaging
+setuptools>=41.4.0,<42.0.0
+wheel>=0.33.6,<0.34.0
