--- a/packages/ml_api/tox.ini
+++ b/packages/ml_api/tox.ini
@@ -12,3 +12,16 @@ setenv =
 
 commands =
     pytest tests
+
+
+[testenv:run_locally]
+deps =
+    {[testenv]deps}
+
+setenv =
+    PYTHONPATH=.
+
+commands =
+    python run.py
+
+
