--- a/packages/ml_api/requirements.txt
+++ b/packages/ml_api/requirements.txt
@@ -1,6 +1,9 @@
 # api
 flask==1.0.2
 
+# schema validation
+marshmallow==2.17.0
+
 # local classifier_model package
 # update with your local path
 -e "/Users/metra4ok/Documents/Udemy_course/my_projects/dmlm-titanic-classifier/packages/titanic_classifier_model"
